# yt_workouts

./: README.md
03_Build_Agentic_RAG_using_MCP/: .gitignore  README.md  main.py  pyproject.toml  rag2.ipynb  rag2.py  requirements.txt  server2.py
04_wordsmaster/: main.py  pyproject.toml
